# ChangeLog for net-im/pyicq-t
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/pyicq-t/ChangeLog,v 1.26 2013/09/13 16:01:23 hanno Exp $

*pyicq-t-0.8.1.5-r2 (13 Sep 2013)

  13 Sep 2013; <hanno@gentoo.org> +pyicq-t-0.8.1.5-r2.ebuild,
  +files/pyicq-t-0.8.1.5-pillow-imaging.patch:
  Fix deprecated PIL imports, switch to new eclass.

  03 Aug 2013; Michał Górny <mgorny@gentoo.org> pyicq-t-0.8.1.5.ebuild,
  pyicq-t-0.8.1.5-r1.ebuild:
  Move dev-python/twisted to dev-python/twisted-core.

  27 Apr 2013; Agostino Sarubbo <ago@gentoo.org> pyicq-t-0.8.1.5-r1.ebuild:
  Stable for x86, wrt bug #467506

  27 Apr 2013; Agostino Sarubbo <ago@gentoo.org> pyicq-t-0.8.1.5-r1.ebuild:
  Stable for amd64, wrt bug #467506

*pyicq-t-0.8.1.5-r1 (18 Mar 2013)

  18 Mar 2013; Hanno Boeck <hanno@gentoo.org> +pyicq-t-0.8.1.5-r1.ebuild,
  +files/pyicq-t-0.8-initd-r1:
  Add checkpath for /var/run, fix python code (#315115), EAPI 5-port, replace
  dosed with sed.

  21 Aug 2011; Hanno Boeck <hanno@gentoo.org> files/pyicq-t-0.8-initd:
  Avoid warnings with baselayout 2 / openrc / start-stop-daemon, --chuid is
  deprecated.

  02 Jul 2010; Hanno Boeck <hanno@gentoo.org> pyicq-t-0.8.1.5.ebuild,
  +files/pyicq-t-0.8.1.5-python26-warnings.diff:
  Fix deprecation warnings with python 2.6.

  23 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pyicq-t-0.8.1.5.ebuild:
  Delete calls to deprecated python_version().

  10 Jan 2010; Maurice van der Pot <griffon26@gentoo.org>
  -files/pyicq-t-0.8-twisted-2.5.patch, -pyicq-t-0.8.1.ebuild,
  -pyicq-t-0.8.1.1.ebuild, -pyicq-t-0.8a.ebuild, -pyicq-t-0.8b.ebuild:
  Removed old ebuilds.

  03 Oct 2009; Markus Meier <maekke@gentoo.org> pyicq-t-0.8.1.5.ebuild:
  amd64/x86 stable, bug #287378

*pyicq-t-0.8.1.5 (26 Aug 2009)

  26 Aug 2009; Maurice van der Pot <griffon26@gentoo.org>
  +pyicq-t-0.8.1.5.ebuild:
  Version bump because of memory leak in 0.8.1.4.
