@@ -5,6 +5,7 @@ AUX pyicq-t-0.8.1.5-python26-warnings.diff 3485 SHA256 6e5eff6faf6e87535401a4c69
 DIST pyicqt-0.8.1.5.tar.gz 183865 SHA256 15ffa7b7d8f2d749492eec3b87bf64f8a429452282ca14e36ba5aee45b5322df SHA512 5b83adf86746c2af60bed2759c7d4e3a3839bea532e0882a6dc087aee5e0afa1320c6d2d2296a667ec45c5b36be879034f079fd30cef924e8db5f66a2f1d3fde WHIRLPOOL 91a51c81d32bc688d4ffb6f4623ae1efe7e5dc5d524b7fd2f519720dc81078d6547ea64a5311bcfcfae0ad77f8fe7ab933f5b63e3f2887fe4671c71b2a6848d9
 EBUILD pyicq-t-0.8.1.5-r1.ebuild 2298 SHA256 d33c4009c0f42b13d4ddd0ff384e6d80213fe3ca1e900b6ce7413953169f6c88 SHA512 d3970a8b7c827357a6d68f43eee02ea05f5e8f7977a23c4a1230bbedc0ebd224ea598bc96dae7a276999b9cebc7e551e39b5c770e464b9d332320aa9669098a7 WHIRLPOOL 672ae63cd8e1e7fe6377f48cc1dae6598f51d6534c905a134e8c495c29f803b6ff45c8377062f150d3e9cfc283b592f41dbfd6928b3742c7bb9c6d6902302ae9
 EBUILD pyicq-t-0.8.1.5-r2.ebuild 1649 SHA256 cd1254e26ca216bf340ac1c3da3dacba866a43ef4cefb2cd99a4967e8a248ae1 SHA512 459bad1d0c52be2038a4ccb918e1be04998f4a2414c6d7d49fddb4556c63ad60d8921b4efb5561e41aaacf92c513bcb11b56cb16a1069b9a47ded64db8e6be3c WHIRLPOOL 5cd47b9e0771c27900df0e06afde5c4d64add7dd52c411cc515bfa0a243eb38a4ea39c941fc6d6bc10fad143a106d71b533608b2e7bb0903369b40d960e21527
+EBUILD pyicq-t-0.8.1.5-r3.ebuild 1644 SHA256 d24ca2693ac0b4a88926105ff5e124ed67473f89a1e43935ef75d19a9333d0e6 SHA512 623365a4345640b9133be337da61c4e21c4a8cc3a2b8be9cfba2d008d08db67615e19096411f1b10913281fc5cc3f654d76303fa6e49e104d8959392f3f344a5 WHIRLPOOL 5f5cd8e470cd2dcde8eae2813c1f6018ac4bd618854386b97a315564f5e7c8d794dc1e03b872159a58b27a11cd4ae503083171bb87e16d6b33bdccd07de3d860
 EBUILD pyicq-t-0.8.1.5.ebuild 2081 SHA256 8b9c3e58e058435787aa3db35c6b8ac7d5f4529a17f55f861e0e64a5d825c600 SHA512 778017024f924e63a7921f641bc2cf687b71a85db494d167e60669883d08155a78e0ab8066d8eb91412f391f88ffb87fb052a1553f1a5384955792b8bffe80b6 WHIRLPOOL 99e9f2536997b7b3a1004ea13d956b53af8a7e0adcf4bba8ee16b6193aa088f55ebad4dcfb7c6e05bca1b7a270f5cca9f4c2aa745a9b4089ef535673266b8618
-MISC ChangeLog 4447 SHA256 819c3388b7875e2ed3f78a71679d005827ce3fcac78e78d1f3a4d604f4f07300 SHA512 ef143c54d34fe1f74b9503f3a0b60830d665fd80e8fa6a9150778505f41c9f2ec678767e7f1beba4559462cb35672f92646f4afef171ddd56bfb6552d65204b8 WHIRLPOOL 9f86cb3e86d9dc06debe665bddb9c9c846f2320378152b81d1af066316b3ac74a1bc29775ff9772370643411203a919fd00c21cdd999f6e0f9361af64e8cb61e
+MISC ChangeLog 4602 SHA256 10512eabe43512bc190aa4de48b8d08c9af256e0e0d4cad0f02c22bd0fa0e3ec SHA512 7465aa8e8bb7fa7fa1a784d886d8aa27b94761fcaa90fd9ce716dfed70f85cbe35c49fcb65be11e3f2f9c16e7e0cbea98edec341b05bfee095b2a471818e05b2 WHIRLPOOL 3a2973ab2555675f2764746523ae1cdfd7d0b0d6da62b1950c5615a4f3af1472cf465871d2d2893917abdf8ce77c20ae4d42e88817012f8e6bfeb5cf5a8185cd
 MISC metadata.xml 412 SHA256 ffea6006aefb0ca439a16fca2a9d9099293ba3c2e3e9eb2edfc5281197691674 SHA512 ae521283b485f07979b7349b7a7683ec53cc9a9e277242df77f0ccc459230b38e20898fc0e031550090dd79c7d5f5759fa96d1fab1fa2ec0af0b291dd719c5ed WHIRLPOOL 1924e0c2155d97142f1f347de412226f1180640c6726e7976499590c9ede6ceb0c5c347bf6ddb4d3879fcf93ef43323eee7f2677b3d185365678d88349a7c61b
