@@ -1,6 +1,11 @@
 # ChangeLog for net-im/pyicq-t
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/pyicq-t/ChangeLog,v 1.26 2013/09/13 16:01:23 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/pyicq-t/ChangeLog,v 1.27 2013/09/14 23:01:18 hanno Exp $
+
+*pyicq-t-0.8.1.5-r3 (14 Sep 2013)
+
+  14 Sep 2013; <hanno@gentoo.org> +pyicq-t-0.8.1.5-r3.ebuild:
+  Init script and patch applying was broken in -r2, fix.
 
 *pyicq-t-0.8.1.5-r2 (13 Sep 2013)
 
